# code-with-teddy

./: .dockerignore  .env.dev  .env.local  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc  .stylelintrc.json  README.md  TODO.md  app_description.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements-prod.txt  ruff.toml  ty.toml
.github/: copilot-instructions.md
.github/workflows/: run-full-ci.yml
app/: constants.py  errors.py  mixins.py  permissions.py  settings.py
app/datastore/: database.py  db_models.py
app/services/blog/: blog_handler.py  blog_utils.py  markdown_parser.py
app/services/general/: auth_helpers.py  email_handler.py  encryption_handler.py  transforms.py
app/services/media/: media_handler.py
app/services/users/: user_handler.py
app/web/: __init__.py  auth.py  errors.py  field_types.py  main.py  monitoring.py  web_models.py
app/web/api/: api_models.py  error_handlers.py  main.py  responses.py
app/web/api/routes/: auth.py  users.py
app/web/html/: const.py  error_handlers.py  flash_messages.py  input.css  jinja_globals.py  main.py  tailwind.config.js  web_user_handlers.py
app/web/html/routes/: auth.py  blog.py  errors.py  games.py  landing.py  portfolio.py  projects.py  sitemap.py  users.py
app/web/html/static/css/: blog-code-hilights.css  connect4.css  styles.css  tailwind-styles.css
app/web/html/static/css/libraries/: bundled.css  tippy.css
app/web/html/static/js/: alpine.js  htmx.js
app/web/html/static/js/custom/: connect4.js  script.js  script_end.js
app/web/html/static/js/libraries/: alpine.js  bundled-deferred.js  bundled-non-deferred.js  htmx.js
app/web/html/static/media/favicon/: site.webmanifest
app/web/html/templates/blog/: edit_post.html  list_posts.html  manage_series.html  read_post.html
app/web/html/templates/blog/partials/: about_the_author.html  add_series_form.html  comment.html  comment_deleted.html  comment_form.html  comment_preview.html  comments.html  deleted_series.html  edit_post_form.html  edit_post_media_form.html  edit_preview.html  like_button.html  list_post_media.html  list_posts_form.html  list_series.html  list_series_form.html  listed_posts.html  paginator.html  post_body.html  read_post_series_info.html  read_posts_next_in_series.html  single_series.html  thumbnail.html  toggle_show_media.html
app/web/html/templates/errors/: general_error.html
app/web/html/templates/landing/: landing.html
app/web/html/templates/landing/svgs/: code_in_dark.html  computer_rocketship.html  learning.html
app/web/html/templates/main/about/: about.html
app/web/html/templates/main/about/sections/: landing.html  philosophies.html  random_facts.html  uses.html
app/web/html/templates/main/about/svgs/: code_in_dark.html  computer_rocketship.html  (+1 more)
app/web/html/templates/main/blog/: edit_post.html  list_posts.html
app/web/html/templates/main/experience/: experience.html
app/web/html/templates/main/projects/: projects.html
app/web/html/templates/projects/: connect4.html  connect4_inner.html  file_renamer.html  moth_hunt.html  twisted_towers.html  twisted_towers_modal.html
app/web/html/templates/shared/: base.html
app/web/html/templates/shared/partials/: after_body.html  bottom_nav.html  favicon.html  flash_error_messages.html  flash_message.html  flash_messages.html  footer.html  head.html  navbar.html  previous_next_nav.html  refresh_access.html  svg_extras.html
app/web/html/templates/users/: login.html  login_modal.html  password_reset.html  register.html  request_password_reset.html  settings.html
app/web/html/templates/users/partials/: avatar.html  login_form.html  password_reset_form.html  register_form.html  request_password_reset_form.html  settings_form.html
app/web/html/wtform_utils/: __init__.py  custom_validators.py  wtform_fields.py
caddy/: Caddyfile  Caddyfile-dev
docker_config/: Dockerfile.app  Dockerfile.nginx  docker-compose.yaml
migrations/: README  README.md  alembic.ini  env.py
migrations/versions/: 19678bab3f2b_add_password_reset_token.py  45dfd4469e80_add_password_reset_token.py  9477169e5ea8_locations_string_to_array.py  de229330a488_initial_migration.py
nginx/: nginx-dev.conf  nginx.conf
scripts/: alembic.py  bundler.py  deploy.sh  populate_db.py  pytest-with-coverage.sh  run-dev.sh  run_dev.py  run_dev.sh  start_local_postgres.py  static_version_updater.py  update-requirements.sh  update_pre_commit_add_deps.py
specs/: README.md  _template.md  spec_0001_update_ruff_ty_rules.md  spec_0002_update_github_actions_pipeline.md  spec_0003_update_blog_post_locations_column.md
tests/: __init__.py  conftest.py  model_fixtures.py
tests/data/: models.py
tests/data/example_blog_posts/: git_rebase.md  hot_reload.md  kitchen_sink.md  pre_commit_hooks.md  pytest_tips_and_tricks.md  vim_cheat_sheet.md
tests/functional_tests/: __init__.py  conftest.py
tests/functional_tests/api_tests/: conftest.py  test_auth.py
tests/functional_tests/api_tests/users/: test_users_mutating.py  test_users_non_mutating.py
tests/functional_tests/html_tests/: conftest.py  const.py  test_blog.py  test_blog_get_post.py  test_blog_list.py  test_experience.py  test_landing.py  test_main.py  test_projects.py
tests/functional_tests/html_tests/auth/: test_auth.py
tests/functional_tests/html_tests/blog/: test_blog_create.py  test_blog_edit_non_mutating.py  test_blog_edit_post.py  test_blog_get_post.py  test_blog_like.py  test_blog_list.py  test_blog_media.py  test_comment_mutating.py  test_comment_non_mutating.py  test_db_updates.py  test_series_mutating.py  test_series_non_mutating.py
tests/functional_tests/html_tests/users/: test_users_mutating.py  test_users_non_mutating.py
tests/playwright_tests/: README.md  __init__.py  conftest.py  helpers.py  test_login.py  test_main.py  test_portfolio.py
tests/playwright_tests/blog/: __init__.py  test_blog_list.py  test_blog_manage_series.py  test_blog_post_get.py
tests/unit_tests/services/blog/: test_blog_utils.py
tests/unit_tests/services/general/: test_transforms.py
(+98 files in other folders)
