# pyproject.toml: unified Python project metadata and tool configuration file
# See PEP-518: https://www.python.org/dev/peps/pep-0518/


# --------------------------------------------------------------------------
# Project setup
# --------------------------------------------------------------------------
# Project Metadata
# Reference: https://www.python.org/dev/peps/pep-0621/
[project]
name = "code-with-teddy"
version = "1.0"
description = "Teddy's portfolio website."
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.14",
]
maintainers = [
    { name = "Theodore Williams", email = "theodore.f.williams@gmail.com" },
]
# Dependencies specified here should ideally not be pinned, unless
# recommended by the package itself. This follows best practices
# established by PyPA:
#   https://packaging.python.org/discussions/install-requires-vs-requirements/
dependencies = [
    # Aiocache: async cache library (used for sitemap caching; note: not used for HTML routes due to nonce conflicts)
    "aiocache",
    # Alembic: SQLAlchemy migration tool
    "alembic",
    # Asyncpg: PostgreSQL database adapter
    "asyncpg",
    # Bcrypt: password hashing library
    "bcrypt",
    # BeautifulSoup: HTML parser
    "beautifulsoup4",
    # Bleach: HTML sanitizer
    "bleach",
    # Cryptography: cryptographic library
    "cryptography",
    # Email-validator: email validation library for Pydantic
    "email-validator",
    # FastAPI: web framework
    "fastapi",
    # Gunicorn: load balancer
    "gunicorn",
    # Itsdangerous: cryptographically signed tokens
    "itsdangerous",
    # Jinja-partials: Jinja2 template partials
    "jinja-partials",
    # Jinja2: templating engine
    "jinja2",
    # MailerSend: email sending service
    "mailersend",
    # Markdown: Markdown parser
    "markdown",
    # Micawber: oEmbed consumer
    "micawber",
    # Pillow: image processing library
    "pillow",
    # PsycoPG: PostgreSQL database adapter
    "psycopg[binary,pool]",
    # Pydantic: data modeling, validation and settings management
    "pydantic",
    # Pydantic-settings: Pydantic settings management
    "pydantic-settings",
    # Pygments: syntax highlighting library
    "pygments",
    # PyJWT: JSON Web tokens
    "pyjwt",
    # Pymdown-extensions: Markdown extensions
    "pymdown-extensions",
    # Python-mulitpart: multipart form data parser
    "python-multipart",
    # Pytz: timezone library
    "pytz",
    # Sentry-sdk: error tracking
    "sentry-sdk[fastapi,sqlalchemy]", # aiohttp, httpx (dev deps)
    # SQLAlchemy: database toolkit
    "sqlalchemy[asyncio]",
    # Typer: CLI toolkit (needed in prod for Alembic migrations)
    "typer[all]",
    # Uvicorn: ASGI server
    "uvicorn[standard]",
    # werkzeug: WSGI utility library (also useful utilities for our ASGI app)
    "werkzeug",
    # WTForms: web forms library
    "wtforms[email]",
]

[project.optional-dependencies]
dev = [
    # Aiohttp: async HTTP client/server
    "aiohttp",
    # Anyio: async library
    "anyio",
    # Black: code formatter (for blacken-docs)
    "black",
    # Docker: containerization tool
    "docker",
    # Faker: fake data generator
    "faker",
    # HTTPX: async HTTP client
    "httpx",
    # Pip-tools: dependency management
    "pip-tools",
    # Playwright: browser automation
    "playwright",
    # Pre-commit: git pre-commit hooks
    "pre-commit",
    # Pytest: testing framework
    "pytest",
    # Pytest-cov: coverage support for pytest
    "pytest-cov",
    # Pytest-mock: mock support for pytest
    "pytest-mock",
    # Pytest-playwright: Playwright support for pytest
    "pytest-playwright",
    # Pytest-rerunfailures: re-run failed tests
    "pytest-rerunfailures",
    # Pyyaml: YAML parser
    "pyyaml",
    # Requests: HTTP client
    "requests",
    # Rich: pretty terminal output
    "rich",
    # Ruff: fast all-in-one linter, written in Rust
    "ruff",
    # Setuptools: build system
    "setuptools",
    # SQLAlchemy-utils: utility functions for SQLAlchemy
    "sqlalchemy-utils",
    # Tenacity: retrying library
    "tenacity",
    # Ty: static type checker
    "ty",
    # Types-*: type stubs for external libraries
    "types-bleach",
    "types-markdown",
    "types-pyyaml",
    "types-pytz",
    "types-requests",
]

[project.urls]
source = "https://github.com/VerdantFox/code-with-teddy"
issues = "https://github.com/VerdantFox/code-with-teddy/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


# --------------------------------------------------------------------------
# Tool configurations
# --------------------------------------------------------------------------
# ------------------------------ Pytest ------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
# addopts = "--reruns 2"
filterwarnings = [
    # Ignore warnings from all sources so that we can ignore warnings from
    # external libraries that we can't control.
    "ignore",
    # Overwrite to error on warnings from our own code.
    "error:::tests",
    "error:::app",
    "error:::scripts",
]


# Coverage
[tool.coverage.run]
branch = true
concurrency = ["greenlet", "thread"]


[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    "if __name__ == __main__:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "def __repr__",
    "def __str__",
]
include = ["app/*", "scripts/*", "tests/*"]
skip_covered = true # Don't show fully covered files in the report
